Fix move scrollbar inside the modal lists

--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,6 @@ input[type="file"]:hover {
   padding: 20px;
   border-radius: 20px;
   user-select: text;
-  max-height: 70vh; /* Set a maximum height for the list to fit within the modal */
-  overflow-y: auto; /* Enable vertical scrolling for the list */
 }
 
 .modal-content button {
@@ -72,4 +70,9 @@ input[type="file"]:hover {
 
 .modal-content ul li {
   margin-bottom: 10px;
+}
+
+.scrollable-content {
+  max-height: 70vh; /* Set a maximum height for the list to fit within the modal */
+  overflow-y: auto; /* Enable vertical scrolling for the list */
 }
